# headpy

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tests.py
credentials/: app_credentials
headpy/: auth.py  vacancies.py
